--- a/app/src/main/res/drawable/ic_steps.xml
+++ b/app/src/main/res/drawable/ic_steps.xml
@@ -5,9 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FF4081"
-        android:pathData="M12,2L2,7v9c0,4.4 3.6,8 8,8s8,-3.6 8,-8V7L12,2z"/>
-    <path
-        android:fillColor="#FF4081"
-        android:pathData="M12,14L2,19v9c0,4.4 3.6,8 8,8s8,-3.6 8,-8V19L12,14z"/>
-</vector>
+        android:fillColor="#FF000000"
+        android:pathData="M13.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM9.8,8.9L7,23h2.1l1.8,-8 2.1,2v6h2v-7.5l-2.1,-2 0.6,-3C14.8,12 16.8,13 19,13v-2c-1.9,0 -3.5,-1 -4.3,-2.4l-1,-1.6c-0.4,-0.6 -1,-1 -1.7,-1 -0.3,0 -0.5,0.1 -0.8,0.1L6,8.3V13h2V9.6l1.8,-0.7"/>
+</vector> 
