--- a/app/src/main/res/drawable/ic_water.xml
+++ b/app/src/main/res/drawable/ic_water.xml
@@ -1,16 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#2196F3"
-        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8z"/>
-    <path
-        android:fillColor="#2196F3"
-        android:pathData="M12,14c-1.1,0 -2,-0.9 -2,-2s0.9,-2 2,-2 2,0.9 2,2 -0.9,2 -2,2z"/>
-    <path
-        android:fillColor="#2196F3"
-        android:pathData="M12,10c-1.1,0 -2,-0.9 -2,-2s0.9,-2 2,-2 2,0.9 2,2 -0.9,2 -2,2z"/>
+<vector android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF2196F3" android:pathData="M12,2C8,7 4,10 4,14c0,3 3,6 8,6s8,-3 8,-6C20,10 16,7 12,2z"/>
 </vector>
