--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,4 +11,9 @@
         android:orderInCategory="100"
         android:title="@string/action_logout"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_change_password"
+        android:orderInCategory="101"
+        android:title="@string/action_change_password"
+        app:showAsAction="never" />
 </menu>
