--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="tr.com.necatiefeaslan.saglikliyasam.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_change_password"
+        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.changepassword.ChangePasswordFragment"
+        android:label="@string/action_change_password"
+        tools:layout="@layout/fragment_change_password" />
 </navigation>
